--- a/NotificatorMobile/NotificatorMobile.csproj
+++ b/NotificatorMobile/NotificatorMobile.csproj
@@ -66,6 +66,8 @@
 		<PackageReference Include="LiteDB" Version="5.0.21" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="9.0.22" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
+		<PackageReference Include="Plugin.LocalNotification" Version="11.1.4" />
+		<PackageReference Include="System.Drawing.Common" Version="4.7.2" />
 	</ItemGroup>
 
 	<ItemGroup>
